SFUSA/force-app/main/default/objects/AccountSurvey__c/fields/CompletedBy__c.field-meta.xml
<CustomField>
        <fullName>CompletedBy__c</fullName>
        <inlineHelpText>Person who completed the GoSpotCheck Survey.</inlineHelpText>
        <label>Completed By</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>