SFUSA/force-app/main/default/objects/AccountSurvey__c/fields/DateCompleted__c.field-meta.xml
<CustomField>
        <fullName>DateCompleted__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </CustomField>