SFUSA/force-app/main/default/objects/AccountSurvey__c/fields/ScoreIndicator__c.field-meta.xml
<CustomField>
        <fullName>ScoreIndicator__c</fullName>
        <formula>IMAGE( 
IF(ScoreValue__c=0, "/img/samples/stars_000.gif", 
IF(ScoreValue__c&lt;0.20, "/img/samples/stars_100.gif", 
IF(ScoreValue__c&lt;0.40, "/img/samples/stars_200.gif", 
IF(ScoreValue__c&lt;0.60, "/img/samples/stars_300.gif", 
IF(ScoreValue__c&lt;0.80, "/img/samples/stars_400.gif",
IF(ScoreValue__c &lt;= 1, "/img/samples/stars_500.gif", 
"/img/samples/stars_000.gif"
)))))), 
"")</formula>
        <label>Score Indicator</label>
        <type>Text</type>
    </CustomField>