SFUSA/force-app/main/default/objects/AccountSurvey__c/fields/ScoreValue__c.field-meta.xml
<CustomField>
        <fullName>ScoreValue__c</fullName>
        <description>A measure of how well a store complies with the objectives of the survey</description>
        <inlineHelpText>This is a percentage which measures how well a store complies with the objectives of the survey.</inlineHelpText>
        <label>Score Value (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </CustomField>