SFUSA/force-app/main/default/objects/AccountSurvey__c/fields/SurveyID__c.field-meta.xml
<CustomField>
        <fullName>SurveyID__c</fullName>
        <externalId>true</externalId>
        <label>Survey ID</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>